style.css
* {
  padding: 0;
  margin: 0;
}

/*sticky nav*/
.bg-cover {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  transition: all 350ms ease;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
}

.reveal {
  opacity: .85;
  display: block;
  pointer-events: auto;
  visibility: visible;
}

.hamburger-shell {
  margin: 0;
  position: fixed;
  overflow: hidden;
  width: 70px;
  height: 100px;
  overflow: auto;
  left: calc(100% - 100px);
  top: 20px;
  z-index: 3;
}

.top, .middle{
  position: absolute;
  width: 40px;
  height: 7px;
  background-color: black;
  transition: all 350ms ease-in-out;
  top: 20px;
}

.middle {
  top: 40px;
}

#menu {
  position: fixed;
  left: calc(100% - 292px);
  top: 10px;
  color: black;
  display: none;
  margin: 120px 30px;
  text-decoration: none;
  font-family: 'Playfair Display', serif;
  font-weight: 100;
  font-size: 10px;
  text-transform: uppercase;
  color: #333;
  padding: 24px;
  width: 200px;
  text-align: right;
  z-index: 3;
}

#menu a li {
  text-decoration: none!important;
  padding-bottom: 10px;
  margin-bottom: 12px;
  list-style: none;
  color: #FAFAFA;
  transition: all 150ms ease;
  display: block;
  font-size: 12px;
}

#menu a li:hover {
  color: #DADADA;
  padding-right: 3px;
}

#menu a li:hover:after {
}

#menu a {
  text-decoration: none;
}

.rotate {
  transform: rotate(225deg);
  -webkit-transform: rotate(225deg);
  top: 30px;
  background-color: turquoise;
  height: 2px;
}

.rotate-back {
  transform: rotate(-225deg);
  -webkit-transform: rotate(-225deg);
  top: 30px;
  background-color: red;
  height: 2px;
}

.top {
-webkit-animation-delay: 100ms;
}

.middle {
-webkit-animation-delay: 250ms;
}

.bottom {
  -webkit-animation-delay: 400ms;
}

.menu-name {
  font-family: 'Playfair Display', serif;
  font-weight: 900;
  color: black;
  font-size: 14px;
  text-decoration: none;
  position: absolute;
  top: 56px;
  left: -1px;
  transition: all 350ms;
}

.bump {
  top: 64px;
  color: turquoise;
}

/*end nav*/

a {
  text-decoration: none;
}

p {
  margin-bottom: 30px;
}

p:last-child {
  margin-bottom: 0;
}

blockquote {
  position: relative;
  marign: 0;
  padding: 30px 120px;
  text-align: center;
  font-size: 24px;
}

blockquote:before, blockquote:after {
    position: absolute;
    width: 60px;
    height: 60px;
    font-size: 120px;
    line-height: 1;
}
blockquote:before {
    top: 0;
    left: 0;
    content: "\201C";
}
blockquote:after {
    top: 0;
    right: 0;
    content: "\201D";
}

.col {
  flex: 1;
  padding: 10px;
  margin: 10px;
  word-wrap: break-word;
  background-color: #F7F7F7;
}

.container {
  display: flex;
  margin: 0 auto;
  padding-top: 30px;
}

.container-shop {
  display: flex;
  margin: 0 auto;
  padding-top: 30px;
}

#contact-logo {
  border-radius: 50%;
  margin: 0px 480px;
}

.contact {
  text-align: center;
  color: black;
  text-decoration: underline;
}

#email {
  width: 15px;
  height: 15px;
}

footer {
  height: 100px;
  background-color: rgba(204,204,204,.5);
  width: 100%;
  margin: 0 auto;
}

#footer-container {
  display: flex;
}

#footer-content {
  flex: 1;
  padding: 35px 0 0 0;
  margin-left: 55px;
  text-align: left;
}

.footer-item {
  padding-right: 5px;
  color: gray;
  text-decoration: none;
}

.footer-item img {
  height: 25px;
  width: 25px;
  margin: 5px;
}

.footer-item-email img {
  width: 32px;
  height: 25px;
  margin: 5px;
}

#header-container {
  display: flex;
}

#header-img {
  width: 100%;
  margin: 0 auto;
  background-size: contain;
  margin-top: -1075px;
  -webkit-filter: blur(2px);
  -moz-filter: blur(2px);
  -o-filter: blur(2px);
  -ms-filter: blur(2px);
  filter: blur(2px);
  opacity: 0.75;
  z-index: 1;
}

h1 {
  float: left;
  font-family: 'Inconsolata', monospace;
  font-weight: lighter;
  font-size: 30px;
  padding: 5px 5px 5px 50px;
}

h2 {
  margin: 5px 0;
  font-size: 30px;
}

h5 {
  margin: 5px 0;
  font-family: 'Ubuntu', sans-serif;
  font-size: 14px;
}

li {
  display: inline;
  font-size: 14px;
  list-style-type: none;
  margin: 0;
}

.name {
  color: black;
  margin-top: 55px;
  font-family: 'Playfair Display', serif;
  margin-left: 20px;
}

#nav-logo {
  flex: 1;
  height: 450px;
  max-width: 600px;
  padding-top: 60px;
  padding-bottom: 0px;
  margin: auto;
  margin-bottom: 0px;
  display: block;
  z-index: 2;
}

p {
  margin: 10px 0;
}

.post-comment {
  margin: 10px 0;
  font-family: 'Ubuntu', sans-serif;
  font-size: 14px;
}

.post-image {
  max-width: 400px;
  padding-top: 10px;
  max-height: 400px;
  margin: 0 auto;
}

.post-image2 {
  max-width: 400px;
  padding-top: 10px;
  max-height: 400px;
  margin: 0 auto;
}

.quote {
  font-style: italic;
  margin: 0px 0px 0px 25px;
}

.quote-container {
  text-align: center;
}

section {
  color: gray;
  font-family: 'Playfair Display', serif;
  margin: 50px auto;
  width: 90%;
}

#social {
  flex: 1;
  padding: 35px 35px 0 0;
  text-align: right;
}

ul#nav {
  font-family: 'Playfair Display', serif;
  padding: 10px 0;
  margin: 40px;
  text-align: right;
  text-decoration: none;
}


@media screen and (max-width: 768px) {

  a, #nav{
    padding-left: 0;
  }

  blockquote {
    position: relative;
    marign: 0;
    padding: 30px 0px;
    text-align: center;
    font-size: 24px;
  }

  blockquote:before, blockquote:after {
    position: absolute;
    width: 60px;
    height: 60px;
    font-size: 90px;
    line-height: 1;
  }

  blockquote:before {
    top: -10px;
    left: 0;
    content: "\201C";
    color: black;
  }

  blockquote:after {
    top: 190px;
    right: 0;
    content: "\201D";
    color: black;
  }

  h1 {
    padding: 5px 0 0 50px;
  }

  .col {
    flex: 1;
    padding: 25px 0px 50px 0px;
    margin: 10px;
  }

  .container {
    display: block;
    width: 20em;
  }

  #contact-logo {
    border-radius: 50%;
    margin: 0px 70px;
  }

  .name {
    margin-left: -12px;
  }

  #nav-logo {
    height: 255px;
    max-width: 320px;
    padding-top: 100px;
    margin: auto;
  }

  #social {
    flex: 1;
    padding: 35px 120px 0 0;
    text-align-last: right;
  }

  .post-image {
    width: 100%;
    padding-top: 10px;
    margin: 0 auto;
  }
}

@media all and (max-width: 320px) {
  a, #nav{
    padding-left: 0;
  }


  blockquote {
    position: relative;
    marign: 0;
    padding: 30px 0px;
    text-align: center;
    font-size: 24px;
  }

  blockquote:before, blockquote:after {
    position: absolute;
    width: 60px;
    height: 60px;
    font-size: 90px;
    line-height: 1;
  }

  blockquote:before {
    top: -10px;
    left: 0;
    content: "\201C";
    color: black;
  }

  blockquote:after {
    top: 190px;
    right: 0;
    content: "\201D";
    color: black;
  }

  .col {
    flex: 1;
    padding: 25px 0px 50px 0px;
    margin: 10px;
  }

  .container {
    display: block;
    width: 20em;
  }

  #contact-logo {
    border-radius: 50%;
    margin: 0px 70px;
  }

  h1 {
    padding: 5px 0 0 50px;
  }

  #header-img {
    width: 100%;
    margin: 0 auto;
    background-size: contain;
    margin-top: -1075px;
    -webkit-filter: blur(2px);
    -moz-filter: blur(2px);
    -o-filter: blur(2px);
    -ms-filter: blur(2px);
    filter: blur(2px);
    opacity: 0.75;
    z-index: 1;
  }

  .hamburger-shell {
    margin: 0;
    position: fixed;
    overflow: hidden;
    width: 70px;
    height: 100px;
    overflow: auto;
    left: calc(100% - 85px);
    top: 0px;
    z-index: 2;
  }

  .name {
    margin-left: -12px;
  }

  #nav-logo {
    flex: 1;
    height: 200px;
    max-width: 275px;
    padding-bottom: 0px;
    margin: auto;
    margin-bottom: 0px;
    display: block;
    z-index: 2;
  }

  .post-image {
    width: 100%;
    padding-top: 10px;
    margin: 0 auto;
  }

  #social {
    flex: 1;
    padding: 30px 80px 0 0;
    text-align: right;
  }
}

